# askme

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  SOUL.md  config.yaml  dev-loop-product.sh  dev-loop.sh  docker-compose.yml  pyproject.toml  requirements.txt  resume-product-loop.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
.omc/: prd.json
.omc/plans/: inovxio-memory-v1.md  refactor-modular-pipeline.md  sunrise-deploy-test.md
askme/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  dog_control_client.py  dog_safety_client.py  errors.py  health_server.py  led_controller.py  main.py  mcp_server.py  ota_bridge.py  runtime_health.py  tui.py
askme/agent_shell/: __init__.py  thunder_agent_shell.py
askme/blueprints/: __init__.py  _runner.py  edge_robot.py  lingtu_voice.py  mcp.py  text.py  thunder_edge.py  thunder_text.py  thunder_voice.py  voice.py  voice_perception.py
askme/brain/: __init__.py  bpu_yolo.py  conversation.py  episode.py  episodic_memory.py  extraction_adapter.py  image_archive.py  intent_router.py  llm_client.py  map_adapter.py  memory_admission.py  memory_bridge.py  memory_service.py  memory_system.py  procedural_memory.py  scene_intelligence.py  session_memory.py  (+2 more)
deploy/: askme.service  install.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_PATTERNS.md  ASKME_BOUNDARY.md  AUTONOMOUS_ARCHITECTURE.md  CONFIG_GUIDE.md  HANDOFF.md  LAYER_GAPS.md  MODULE_MIGRATION_PLAN.md  NOVA_Dog_Askme_v4_Report.md  PROACTIVE_AGENT_V2_ARCHITECTURE.md  PROACTIVE_INTELLIGENCE_PLAN.md  PROACTIVE_SYSTEM.md  PRODUCTION_GAPS.md  VISUALIZATION.md  build_demo_ppt.py  generate_voice_samples.py  insert_audio.py  project_report.py  voice_player.html
examples/: mcp_demo.py  test_deepseek_config.py  voice_memory_agent.py  voice_memory_agent_full.py
scripts/: askme-dds-bridge.service  askme-frame-daemon.service  askme.service  brainstem-ros2-bridge.service  brainstem_ros2_bridge.py  check_services.py  clone_voice.py  deal.py  demo_tts.py  deploy_agentic_shell.sh  download_models.py  e2e_test.sh  foxglove_bridge.sh  frame_daemon.py  local_embedding_server.py  mic_test.py  orbbec-camera.service  poc_dds_bridge.py  poc_dds_client.py  poc_dds_publisher.py  qwen35_sunrise.py  rerun-bridge.service  rerun_bridge.py  start.bat  start.sh  start_voice_test.bat  sunrise-voice-service.sh  sync_sunrise.sh  test_chat.py  test_continuous.py  test_live_chat.py  test_minimax.py  test_minimax_tts.py  test_proactive.py  test_vlm_mock.py  test_vlm_voice.py  test_voice_components.py  test_voice_loop.py  update_ppt_speed.py  web_test_ui.py
tests/: conftest.py  test_address_detector.py  test_agent_task_e2e.py  test_alert_dispatcher.py  test_all_modules.py  test_arm_controller.py  test_asr_manager.py  test_association.py  test_attention_manager.py  test_audio_agent.py  test_audio_agent_ota.py  test_audio_filter.py  test_audio_processor.py  test_audio_router.py  test_boundary_cases.py  test_brain_pipeline.py  test_brain_pipeline_estop.py  test_brain_pipeline_extras.py  test_brain_pipeline_memory_prompt.py  test_brain_pipeline_tool_policy.py  test_builtin_tools.py  test_change_detector.py  test_clarification_agent.py  test_clarification_session.py  test_cli.py  test_cli_helpers.py  test_cloud_asr.py  test_commands.py  test_concurrency.py  test_config.py  test_config_validation.py  test_confirm_agent.py  test_contracts_builtin.py  test_control_client.py  test_conversation.py  test_conversation_compression_backoff.py  test_conversation_tool_exchange.py  test_create_skill_e2e.py  test_dds_bridge_client.py  test_decorator_e2e.py  (+148 more)
(+290 files in other folders)
