[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askme"
version = "4.1.0"
description = "Voice AI Assistant with Skills, Robot Control, and Memory"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "sherpa-onnx>=1.10.0",
    "requests>=2.31.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "miniaudio>=1.61",
    "edge-tts>=6.1.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
robot = [
    "pyserial>=3.5",
    "onnxruntime>=1.16.0",
]
memory = [
    "mem0ai>=0.1.0",
]
robotmem = [
    "robotmem>=0.3.0",
    "jieba>=0.42.1",
]
vision = [
    "qp-perception>=0.1.0",
]
embed = [
    "sentence-transformers>=2.7.0",
]

[project.scripts]
askme = "askme.__main__:main"
askme-mcp = "askme.mcp.server:main"

[tool.setuptools.packages.find]
include = ["askme*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# Ignored stylistic / pragmatic rules. Re-enable individually as the codebase
# converges. Real bugs (F-codes, UP-codes) stay enforced.
ignore = [
    "E501",  # line-too-long — 100-col is target, not strict; let formatter own it
    "E701",  # one-line if/colon — common in defensive guard clauses
    "E702",  # one-line semicolons — used in test setup helpers
    "E741",  # ambiguous variable name (l, I, O) — appears in stream-position locals
    "E402",  # module-level import not at top — used in conditional/sys.path setups
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports are intentional
"tests/**" = ["F841"]        # tests often assign for inspection
# Conditional imports for backend availability detection (cyclonedds/telegram/numpy)
"askme/robot/pulse.py" = ["F401"]
"askme/runtime/modules/telegram_module.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["tests/tmp", "data/pytest-tmp"]
